<resources>
    <string name="app_name">KleinGroup</string>
    <string name="app_logo">Guy Dino</string>
    <string name="title_activity_send_file">SendFileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="my_sent_files_title">My Sent Files</string>
    <string name="my_sent_files_all">All</string>
    <string name="my_sent_files_approved">Approved</string>
    <string name="my_sent_files_pending">Pending</string>

    <string name="receive_files_sort_by">Sort By</string>
    <string name="receive_files_filename">File Name</string>
    <string name="receive_files_username">User Email Address </string>
    <string name="receive_files_file_and_user">Choose a File and user to send it to</string>
    <string name="receive_files_send_receive_file">Choose A Received File</string>

    <string name="content_profile_name">Name</string>
    <string name="content_profile_email">Email</string>
    <string name="content_profile_add_friend">Add Friend</string>

    <string name="msf_list_item_username">Username</string>
    <string name="msf_list_item_owner">Owner</string>
    <string name="msf_list_item_textview">TextView</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="filter_by_user">Filter Files by Sender</string>
    <string name="title_activity_yeep">yeep</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_public_receive_files">Receive Public Files</string>
    <string name="title_public_manage_files">Manage Public Files</string>

    <string name="public_send_file_upload">Upload</string>
    <string name="public_file_send_hint">File Name</string>
    <string name="public_file_send_text">You choose a file on your device \n\nThis file is then uploaded to the cloud\n\nAll your friends will be able to see this file</string>
    <string name="public_file_send_progress">Progress</string>

    <string name="public_file_manager_go_to_send_file">Send</string>
    <string name="public_file_manager_go_to_receive_file">Receive</string>
    <string name="public_file_manager_go_to_manage_files">Manage</string>
    <string name="manage_files_title">Manage Files</string>
    <string name="public_file_manager_title">INFO</string>
    <string name="public_files_slogan">Keeping privacy in your hands</string>
    <string name="public_files_info_one">All you need to know about Public Files \n\nSend files lets you choose files to upload \n\nManage files lets you delete and view info for your files</string>
    <string name="public_files_bin_soldier">H\n\nE</string>


    <string name="public_send_file_choose_file">Choose File</string>
    <string name="public_send_file_name">File Name</string>
    <string name="public_send_file_hint_name">File Name</string>
    <string name="public_send_file_info">Choose a file to upload to your public files</string>
    <string name="public_friend_recycler_item_name">Friend Name</string>
    <string name="public_friend_recycler_item_email">Friend email</string>
    <string name="public_file_manager_item_file_name">File Name</string>
    <string name="public_file_manager_item_delete">Delete file</string>
    <string name="public_file_manager_item_view">View info</string>
    <string name="public_file_manager_list_item_friend_name">&#160;&#160;Friend Name</string>


    <string name="toolbar_title">Friends</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>

    <string name="cancel">Cancel</string>
    <string name="send_friend_request">Send Request</string>
    <string name="recycler_friend_request_accept">Accept  </string>
    <string name="recycler_friend_request_Decline">Decline</string>
    <string name="view_recycler_filename">FileName</string>
    <string name="view_recycler_owner">FileName</string>
    <string name="view_recycler_date">Date</string>
</resources>
