<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <EditText
        android:id="@+id/public_file_send_file_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="100dp"
        android:autofillHints="@string/public_file_send_hint"
        android:textStyle="italic"
        android:inputType="text"
        android:minWidth="150dp"
        android:maxWidth="150dp"
        android:labelFor="@+id/public_file_send_file_name_edit_text"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/public_file_send_file_name_edit_text"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/public_send_file_name"
        android:fontFamily="@font/robotrock"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/public_send_file_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/gradient_button_rounded"
        android:layout_centerInParent="true"
        android:layout_alignTop="@id/public_send_file_choose_file_button"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="60dp"
        android:text="@string/public_send_file_upload"
        android:fontFamily="@font/robotrock"
        />

    <Button
        android:id="@+id/public_send_file_choose_file_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/gradient_button_rounded"
        android:text="@string/public_send_file_choose_file"
        android:layout_alignParentRight="true"
        android:fontFamily="@font/robotrock"
        />

    <ImageView
        android:id="@+id/public_send_file_guy_dino"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_guydino"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_logo"
        />

    <TextView
        android:id="@+id/public_file_send_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/public_file_manager_title"
        android:fontFamily="@font/robotrock"
        android:layout_below="@id/public_send_file_guy_dino"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:textSize="30sp"
        android:layout_marginBottom="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="6"
        android:maxLines="3"
        android:fontFamily="@font/robotrock"
        android:layout_centerInParent="true"
        android:layout_below="@id/public_file_send_info"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="@string/public_file_send_text"
        />

    <TextView
        android:id="@+id/public_send_file_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/public_files_slogan"
        android:textStyle="italic"
        android:textSize="12sp"
        />

    <ProgressBar
        android:id="@+id/public_file_sendprogressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@id/public_send_file_choose_file_button"
        android:layout_marginBottom="15dp"
        />
    <TextView
        android:id="@+id/public_send_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/public_file_sendprogressBar"
        android:layout_centerInParent="true"
        android:text="@string/public_file_send_progress"
        android:layout_marginTop="10dp"
        />



</RelativeLayout>