<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dino_image_small_height"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:text="@string/content_profile_add_friend"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_extra_tiny_distance"
        android:layout_marginTop="@dimen/margin_small_distance"
        android:layout_marginRight="@dimen/margin_extra_tiny_distance"
        android:layout_marginBottom="@dimen/margin_extra_tiny_distance"
        android:hint="@string/content_profile_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white" />
</LinearLayout>
