<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/row_padding_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/row_padding_vertical">

    <TextView
        android:id="@+id/msf2_li_txtUserName"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="start|left"
        android:paddingStart="0dp"
        android:paddingRight="0dp"
        android:fontFamily="@font/robotrock"
        android:text="@string/msf_list_item_username"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_small"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/msf2_li_txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/msf2_li_txtUserName"
        android:fontFamily="@font/robotrock"
        android:text="@string/msf_list_item_owner"
        android:textSize="@dimen/textSize_small"/>

    <ImageButton
        android:id="@+id/msf2_li_imgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/margin_tiny_distance"
        android:background="@drawable/circle_button"
        android:src="@drawable/ic_hamburger_24px"
        android:textColor="@color/date" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/msf2_li_txtTitle"
        android:layout_marginTop="0dp"
        android:background="@color/fui_bgGitHub"
        android:text="@string/msf_list_item_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</RelativeLayout>